fix(ci): add partial cache detection to PHP publish workflow
The PHP PIE package build in the publish workflow was missing the
cache detection step. When the Rust cache is restored from a fallback
key, previously cached fingerprint files may be stale and cause
'No such file or directory' errors.

Running 'cargo clean --release' on affected packages prevents Cargo
from reading stale fingerprints. This brings consistency with
ci-php.yaml and ci-elixir.yaml workflows.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1645,6 +1645,16 @@ jobs:
           cache-key-prefix: publish-php-${{ matrix.settings.label }}
           use-sccache: ${{ runner.os != 'Windows' }}
 
+      - name: Detect partial cache hit and clean stale fingerprints
+        shell: bash
+        run: |
+          # Check if cache was a partial hit (restored from fallback key)
+          # For now, we'll do a more conservative check: always clean before build
+          # since the current Cargo.lock changes frequently
+          echo "Preparing clean Rust build environment..."
+          cargo clean --release -p kreuzberg-php 2>/dev/null || true
+          cargo clean --release -p kreuzberg 2>/dev/null || true
+
       - name: Cache PDFium
         uses: ./.github/actions/cache-pdfium
         with:
