--- a/tools/benchmark-harness/Cargo.toml
+++ b/tools/benchmark-harness/Cargo.toml
@@ -2,7 +2,6 @@
 name = "benchmark-harness"
 version.workspace = true
 edition.workspace = true
-lints.workspace = true
 rust-version.workspace = true
 authors.workspace = true
 license.workspace = true
@@ -34,6 +33,7 @@ ahash = { workspace = true }
 num_cpus = { workspace = true }
 which = "8"
 chrono = "0.4"
+minijinja = { version = "2.14", features = ["serde"] }
 
 pprof = { version = "0.15", features = ["flamegraph", "criterion"], optional = true }
 tikv-jemallocator = { version = "0.6", optional = true }
