--- a/packages/elixir/native/kreuzberg_rustler/Cargo.toml
+++ b/packages/elixir/native/kreuzberg_rustler/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT"
 description = "Elixir bindings for Kreuzberg document intelligence library"
 repository = "https://github.com/kreuzberg-dev/kreuzberg"
 
+[lints]
+workspace = true
+
 [lib]
 name = "kreuzberg_rustler"
 crate-type = ["cdylib"]
