chore(deps): prevent dependabot from upgrading artifact actions beyond v4
Pin upload-artifact and download-artifact to v4 until GitHub Actions runners
are upgraded to support v6/v7 (requires Actions Runner 2.327.1+).

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,6 +4,13 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    ignore:
+      # Pin artifact actions to v4 until GitHub Actions runners support v6/v7
+      # v6 and v7 require Actions Runner 2.327.1+ (released Dec 12, 2025)
+      - dependency-name: "actions/upload-artifact"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "actions/download-artifact"
+        update-types: ["version-update:semver-major"]
 
   - package-ecosystem: "cargo"
     directory: "/"
