fix(publish): resolve Node and Ruby publishing failures
Node.js publishing:
- Remove redundant napi artifacts command from package-artifacts scripts
- Scripts already handle artifact packaging manually

Ruby gem publishing:
- Add install-system-deps action to ruby-gem job for CMake
- CMake required to build kreuzberg-tesseract from source

Windows install improvements:
- Make Tesseract/LibreOffice installation non-fatal
- These are optional (tests only), gem builds Tesseract from source
- Keep CMake as required dependency
- Add diagnostics for cache status and PATH configuration

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1040,6 +1040,9 @@ jobs:
         if: runner.os == 'Linux'
         run: scripts/publish/ubuntu/free-disk-space.sh
 
+      - name: Install system dependencies
+        uses: ./.github/actions/install-system-deps
+
       - name: Install MSYS2 toolchain
         if: runner.os == 'Windows'
         shell: pwsh
