fix(ci): resolve CI validate and Python E2E test failures
- Fix CI Validate TypeScript typecheck failure by ensuring WASM is built
  before running workspace-level typecheck. The WASM package's TypeScript
  files import from the compiled pkg/kreuzberg_wasm.js module.

- Fix Python E2E test failure in test_smoke_image_png by improving
  metadata path lookup logic. The helper function now correctly handles
  nested metadata structures where format-specific fields are stored
  in a nested object under the format key.

--- a/.task/tools/typescript.yml
+++ b/.task/tools/typescript.yml
@@ -9,6 +9,7 @@ tasks:
   typecheck:
     desc: Run TypeScript type checking across all projects (uses pnpm workspace typecheck)
     cmds:
+      - task: wasm:build:ci
       - pnpm typecheck
 
   typecheck:check:
