build(benchmarks): rebuild visualizer with chart sorting and WASM support
Rebuilt benchmark visualizer with:
- Alphabetically sorted framework names in all charts
- Added WASM to framework display name mapping
- Updated chart transformers for consistent ordering

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-merge-conflict
       - id: check-added-large-files
-        exclude: uv.lock
+        exclude: uv.lock|docs/benchmarks/app/
       - id: detect-private-key
       - id: check-json
       - id: check-yaml
