fix(ci): resolve multiple CI pipeline failures
This commit addresses four critical CI failures identified in recent workflow runs:

1. TypeScript CLI Build (CI Validate)
   - Problem: dist/cli.js missing, causing ENOENT errors in workspace resolution
   - Solution: Added .gitignore exception for crates/kreuzberg-node/dist/ and
     committed 30 TypeScript build artifacts (664KB)
   - Impact: Unblocks all validation, lint, and format checks

2. Windows Cargo Fingerprint Cache Corruption (CI PHP, CI Go)
   - Problem: Stale fingerprints from partial cache restoration causing builds
     to fail with 'The system cannot find the file specified' errors
   - Solution:
     * Enhanced cache key (v2→v3) with rust-toolchain.toml hash
     * New cleanup-fingerprints.sh script for comprehensive cleanup
     * Enhanced install-cargo-llvm-cov.sh with retry logic and verification
     * Updated ci-php.yaml and ci-go.yaml to run cleanup before builds
   - Impact: Windows builds now resilient to cache corruption

3. Homebrew Formula Check Base64 Error (Publish Release)
   - Problem: Unvalidated API response literal 'null' piped to base64 -d
   - Solution: Added three-stage validation (capture → validate → process)
     before attempting base64 decode
   - Impact: Prevents base64 errors when formula doesn't exist or API fails

4. Elixir Idempotency Check (Publish Release) - previously committed
   - Already fixed in commit 006e3d043

Files changed:
  - .gitignore: Added crates/kreuzberg-node/dist/ exception
  - crates/kreuzberg-node/dist/*: 30 TypeScript artifacts (staged)
  - .github/actions/setup-rust/action.yml: Enhanced cache key
  - .github/workflows/ci-php.yaml: Added fingerprint cleanup
  - .github/workflows/ci-go.yaml: Added fingerprint cleanup
  - .github/workflows/publish.yaml: Fixed Homebrew base64 validation
  - scripts/ci/actions/setup-rust/cleanup-fingerprints.sh: NEW (84 lines)
  - scripts/ci/actions/setup-rust/install-cargo-llvm-cov.sh: NEW (78 lines)

Testing:
  - Ty

--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -75,7 +75,9 @@ runs:
       uses: actions/cache@v5
       with:
         path: ~/.cargo/bin/cargo-llvm-cov
-        key: cargo-llvm-cov-v2-${{ runner.os }}
+        key: cargo-llvm-cov-v3-${{ runner.os }}-${{ hashFiles('rust-toolchain.toml') }}
+        restore-keys: |
+          cargo-llvm-cov-v3-${{ runner.os }}-
 
     - name: Validate sccache installation
       if: inputs.use-sccache == 'true'
@@ -91,6 +93,10 @@ runs:
       if: inputs.target != ''
       shell: bash
       run: scripts/ci/actions/setup-rust/add-target.sh "${{ inputs.target }}"
+
+    - name: Clean stale fingerprints
+      shell: bash
+      run: scripts/ci/actions/setup-rust/cleanup-fingerprints.sh
 
     - name: Install cargo-llvm-cov if not cached
       shell: bash
