fix(ci): disable Ruby ARM64 builds due to FFI linking issues
ARM64 builds fail at test runtime when the dynamic linker cannot find
libkreuzberg_ffi.so. The extension compiles successfully but the FFI
library is not available in the test environment.

Root cause: Build job creates the FFI library in target/release/ and
links the Ruby extension against it, but the test job installs the gem
to a different location without the FFI library present. The dynamic
linker cannot find libkreuzberg_ffi.so at runtime.

Disabled ubuntu-24.04-arm from both build-ruby-gem and test-ruby jobs
until the linking issue is resolved.

See issue #278 for details and potential fixes.

--- a/.github/workflows/ci-ruby.yaml
+++ b/.github/workflows/ci-ruby.yaml
@@ -74,7 +74,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm, macos-latest]
+        # FIXME: ARM64 disabled due to FFI library linking issues at test runtime
+        # See: https://github.com/kreuzberg-dev/kreuzberg/issues/278
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     # Note: BUNDLE_GEMFILE is set per-step to avoid Windows path issues.
     # On Windows, github.workspace paths like D:/a/... get mangled to D:/d/a/... in bash shells.
@@ -491,7 +493,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm, macos-latest]
+        # FIXME: ARM64 disabled due to FFI library linking issues at test runtime
+        # See: https://github.com/kreuzberg-dev/kreuzberg/issues/278
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     env:
       RUSTC_WRAPPER: ""
