--- a/.task/tools/typescript.yml
+++ b/.task/tools/typescript.yml
@@ -7,11 +7,30 @@ includes:
 
 tasks:
   typecheck:
-    desc: Run TypeScript type checking across all projects (uses pnpm workspace typecheck)
+    desc: Run TypeScript type checking across all projects (builds WASM and Node first to resolve module imports)
     cmds:
+      - task: _wasm_build
+      - task: _node_build
       - pnpm typecheck
 
   typecheck:check:
-    desc: Alias for typecheck (for consistency with other tools)
+    desc: Run TypeScript type checking in check-only mode (ensures builds before typecheck)
     cmds:
-      - task: typecheck
+      - task: _wasm_build
+      - task: _node_build
+      - pnpm typecheck
+
+  _wasm_build:
+    desc: Build WASM package (internal task)
+    dir: crates/kreuzberg-wasm
+    cmds:
+      - pnpm run build:ci
+    internal: true
+
+  _node_build:
+    desc: Build Node package (internal task)
+    dir: crates/kreuzberg-node
+    cmds:
+      - pnpm exec napi build --platform --release
+      - pnpm exec tsup
+    internal: true
