--- a/examples/python/pyproject.toml
+++ b/examples/python/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["hatchling"]
 
 [project]
 name = "kreuzberg-examples-python"
-version = "4.0.0-rc.10"
+version = "4.0.1"
 description = "Kreuzberg Python binding examples"
 requires-python = ">=3.10"
 
