--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "pnpm": {
     "overrides": {
       "glob": "10.5.0"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "workerd"
+    ]
   },
   "version": "4.0.2"
 }
