docs: add Open Graph meta tags for social media sharing
- Add og-image.png from cloud-frontend for consistent branding
- Create docs/overrides/main.html template with OG and Twitter Card meta tags
  - og:type, og:title, og:description, og:url, og:site_name
  - og:image pointing to static branded image (1200x630)
  - Twitter Card tags for summary_large_image format
- Disable auto-generated social cards in mkdocs.yaml (cards: false)
  - Using static branded image instead of per-page generated cards

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -105,7 +105,8 @@ markdown_extensions:
 plugins:
   - search
   # TODO: Add Algolia DocSearch for enhanced search
-  - social
+  - social:
+      cards: false
   - tags
   - minify:
       minify_html: true
